subCParser.py
# Generated from subC.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class subCParser ( Parser ):

    grammarFileName = "subC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"'['", u"']'", u"','", 
                     u"'.'", u"'->'", u"'++'", u"'--'", u"'&'", u"'*'", 
                     u"'+'", u"'-'", u"'!'", u"'sizeof'", u"'/'", u"'%'", 
                     u"'<<'", u"'>>'", u"'<'", u"'>'", u"'='", u"'=='", 
                     u"'!='", u"'&&'", u"'||'", u"'?'", u"':'", u"';'", 
                     u"'void'", u"'char'", u"'float'", u"'int'", u"'const'", 
                     u"'{'", u"'}'", u"'case'", u"'default'", u"'if'", u"'else'", 
                     u"'switch'", u"'while'", u"'do'", u"'for'", u"'continue'", 
                     u"'break'", u"'return'", u"'#'", u"'include'", u"'<stdio>'", 
                     u"'<stdio.h>'", u"'\"stdio.h\"'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"Id", u"Constant", u"Stringliteral", 
                      u"File", u"COMMENT", u"LINE_COMMENT", u"WS" ]

    RULE_primaryexpr = 0
    RULE_postfixexpr = 1
    RULE_unaryexpr = 2
    RULE_castexpr = 3
    RULE_mulexpr = 4
    RULE_addexpr = 5
    RULE_shiftexpr = 6
    RULE_relationalexpr = 7
    RULE_equalityexpr = 8
    RULE_logicandexpr = 9
    RULE_logicorexpr = 10
    RULE_conditionalexpr = 11
    RULE_assignexpr = 12
    RULE_expr = 13
    RULE_decl = 14
    RULE_declspecifiers = 15
    RULE_initdecltor = 16
    RULE_typespecifier = 17
    RULE_typequal = 18
    RULE_declarator = 19
    RULE_ddeclarator = 20
    RULE_pointer = 21
    RULE_paramdecl = 22
    RULE_typename = 23
    RULE_abstractdecltor = 24
    RULE_dabstractdecltor = 25
    RULE_initializer = 26
    RULE_statement = 27
    RULE_labeled = 28
    RULE_compounds = 29
    RULE_selection = 30
    RULE_iteration = 31
    RULE_jump = 32
    RULE_program = 33
    RULE_edecl = 34
    RULE_include = 35
    RULE_functiondef = 36
    RULE_identifier = 37

    ruleNames =  [ u"primaryexpr", u"postfixexpr", u"unaryexpr", u"castexpr", 
                   u"mulexpr", u"addexpr", u"shiftexpr", u"relationalexpr", 
                   u"equalityexpr", u"logicandexpr", u"logicorexpr", u"conditionalexpr", 
                   u"assignexpr", u"expr", u"decl", u"declspecifiers", u"initdecltor", 
                   u"typespecifier", u"typequal", u"declarator", u"ddeclarator", 
                   u"pointer", u"paramdecl", u"typename", u"abstractdecltor", 
                   u"dabstractdecltor", u"initializer", u"statement", u"labeled", 
                   u"compounds", u"selection", u"iteration", u"jump", u"program", 
                   u"edecl", u"include", u"functiondef", u"identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    Id=53
    Constant=54
    Stringliteral=55
    File=56
    COMMENT=57
    LINE_COMMENT=58
    WS=59

    def __init__(self, input):
        super(subCParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PrimaryexprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(subCParser.PrimaryexprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(subCParser.IdentifierContext,0)


        def Constant(self):
            return self.getToken(subCParser.Constant, 0)

        def Stringliteral(self):
            return self.getToken(subCParser.Stringliteral, 0)

        def expr(self):
            return self.getTypedRuleContext(subCParser.ExprContext,0)


        def getRuleIndex(self):
            return subCParser.RULE_primaryexpr

        def enterRule(self, listener):
            if hasattr(listener, "enterPrimaryexpr"):
                listener.enterPrimaryexpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrimaryexpr"):
                listener.exitPrimaryexpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPrimaryexpr"):
                return visitor.visitPrimaryexpr(self)
            else:
                return visitor.visitChildren(self)




    def primaryexpr(self):

        localctx = subCParser.PrimaryexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_primaryexpr)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [subCParser.Id]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.identifier()
                pass
            elif token in [subCParser.Constant]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(subCParser.Constant)
                pass
            elif token in [subCParser.Stringliteral]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.match(subCParser.Stringliteral)
                pass
            elif token in [subCParser.T__0]:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.match(subCParser.T__0)
                self.state = 80
                self.expr()
                self.state = 81
                self.match(subCParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PostfixexprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(subCParser.PostfixexprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def primaryexpr(self):
            return self.getTypedRuleContext(subCParser.PrimaryexprContext,0)


        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(subCParser.ExprContext)
            else:
                return self.getTypedRuleContext(subCParser.ExprContext,i)


        def identifier(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(subCParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(subCParser.IdentifierContext,i)


        def assignexpr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(subCParser.AssignexprContext)
            else:
                return self.getTypedRuleContext(subCParser.AssignexprContext,i)


        def getRuleIndex(self):
            return subCParser.RULE_postfixexpr

        def enterRule(self, listener):
            if hasattr(listener, "enterPostfixexpr"):
                listener.enterPostfixexpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPostfixexpr"):
                listener.exitPostfixexpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPostfixexpr"):
                return visitor.visitPostfixexpr(self)
            else:
                return visitor.visitChildren(self)




    def postfixexpr(self):

        localctx = subCParser.PostfixexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_postfixexpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.primaryexpr()
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 107 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 107
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [subCParser.T__2]:
                            self.state = 86
                            self.match(subCParser.T__2)
                            self.state = 87
                            self.expr()
                            self.state = 88
                            self.match(subCParser.T__3)
                            pass
                        elif token in [subCParser.T__0]:
                            self.state = 90
                            self.match(subCParser.T__0)
                            self.state = 101
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << subCParser.T__0) | (1 << subCParser.T__7) | (1 << subCParser.T__8) | (1 << subCParser.T__9) | (1 << subCParser.T__10) | (1 << subCParser.T__11) | (1 << subCParser.T__12) | (1 << subCParser.T__13) | (1 << subCParser.T__14) | (1 << subCParser.Id) | (1 << subCParser.Constant) | (1 << subCParser.Stringliteral))) != 0):
                                self.state = 98
                                self._errHandler.sync(self)
                                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                                if la_ == 1:
                                    self.state = 94 
                                    self._errHandler.sync(self)
                                    _alt = 1
                                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                                        if _alt == 1:
                                            self.state = 91
                                            self.assignexpr()
                                            self.state = 92
                                            self.match(subCParser.T__4)

                                        else:
                                            raise NoViableAltException(self)
                                        self.state = 96 
                                        self._errHandler.sync(self)
                                        _alt = self._interp.adaptivePredict(self._input,1,self._ctx)



                                self.state = 100
                                self.assignexpr()


                            self.state = 103
                            self.match(subCParser.T__1)
                            pass
                        elif token in [subCParser.T__5, subCParser.T__6]:
                            self.state = 104
                            _la = self._input.LA(1)
                            if not(_la==subCParser.T__5 or _la==subCParser.T__6):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()
                            self.state = 105
                            self.identifier()
                            pass
                        elif token in [subCParser.T__7, subCParser.T__8]:
                            self.state = 106
                            _la = self._input.LA(1)
                            if not(_la==subCParser.T__7 or _la==subCParser.T__8):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()
                            pass
                        else:
                            raise NoViableAltException(self)


                    else:
                        raise NoViableAltException(self)
                    self.state = 109 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnaryexprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(subCParser.UnaryexprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def postfixexpr(self):
            return self.getTypedRuleContext(subCParser.PostfixexprContext,0)


        def unaryexpr(self):
            return self.getTypedRuleContext(subCParser.UnaryexprContext,0)


        def castexpr(self):
            return self.getTypedRuleContext(subCParser.CastexprContext,0)


        def typename(self):
            return self.getTypedRuleContext(subCParser.TypenameContext,0)


        def getRuleIndex(self):
            return subCParser.RULE_unaryexpr

        def enterRule(self, listener):
            if hasattr(listener, "enterUnaryexpr"):
                listener.enterUnaryexpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUnaryexpr"):
                listener.exitUnaryexpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitUnaryexpr"):
                return visitor.visitUnaryexpr(self)
            else:
                return visitor.visitChildren(self)




    def unaryexpr(self):

        localctx = subCParser.UnaryexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_unaryexpr)
        self._la = 0 # Token type
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [subCParser.T__0, subCParser.Id, subCParser.Constant, subCParser.Stringliteral]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.postfixexpr()
                pass
            elif token in [subCParser.T__7, subCParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                _la = self._input.LA(1)
                if not(_la==subCParser.T__7 or _la==subCParser.T__8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self.unaryexpr()
                pass
            elif token in [subCParser.T__9, subCParser.T__10, subCParser.T__11, subCParser.T__12, subCParser.T__13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << subCParser.T__9) | (1 << subCParser.T__10) | (1 << subCParser.T__11) | (1 << subCParser.T__12) | (1 << subCParser.T__13))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 117
                self.castexpr()
                pass
            elif token in [subCParser.T__14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(subCParser.T__14)
                self.state = 124
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 119
                    self.unaryexpr()
                    pass

                elif la_ == 2:
                    self.state = 120
                    self.match(subCParser.T__0)
                    self.state = 121
                    self.typename()
                    self.state = 122
                    self.match(subCParser.T__1)
                    pass


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CastexprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(subCParser.CastexprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def unaryexpr(self):
            return self.getTypedRuleContext(subCParser.UnaryexprContext,0)


        def typename(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(subCParser.TypenameContext)
            else:
                return self.getTypedRuleContext(subCParser.TypenameContext,i)


        def getRuleIndex(self):
            return subCParser.RULE_castexpr

        def enterRule(self, listener):
            if hasattr(listener, "enterCastexpr"):
                listener.enterCastexpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCastexpr"):
                listener.exitCastexpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCastexpr"):
                return visitor.visitCastexpr(self)
            else:
                return visitor.visitChildren(self)




    def castexpr(self):

        localctx = subCParser.CastexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_castexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 132 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 128
                        self.match(subCParser.T__0)
                        self.state = 129
                        self.typename()
                        self.state = 130
                        self.match(subCParser.T__1)

                    else:
                        raise NoViableAltException(self)
                    self.state = 134 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)



            self.state = 138
            self.unaryexpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MulexprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(subCParser.MulexprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def castexpr(self):
            return self.getTypedRuleContext(subCParser.CastexprContext,0)


        def mulexpr(self):
            return self.getTypedRuleContext(subCParser.MulexprContext,0)


        def getRuleIndex(self):
            return subCParser.RULE_mulexpr

        def enterRule(self, listener):
            if hasattr(listener, "enterMulexpr"):
                listener.enterMulexpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMulexpr"):
                listener.exitMulexpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMulexpr"):
                return visitor.visitMulexpr(self)
            else:
                return visitor.visitChildren(self)



    def mulexpr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = subCParser.MulexprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_mulexpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.castexpr()
            self._ctx.stop = self._input.LT(-1)
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = subCParser.MulexprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_mulexpr)
                    self.state = 143
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 144
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << subCParser.T__10) | (1 << subCParser.T__15) | (1 << subCParser.T__16))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 145
                    self.castexpr() 
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class AddexprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(subCParser.AddexprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def mulexpr(self):
            return self.getTypedRuleContext(subCParser.MulexprContext,0)


        def addexpr(self):
            return self.getTypedRuleContext(subCParser.AddexprContext,0)


        def getRuleIndex(self):
            return subCParser.RULE_addexpr

        def enterRule(self, listener):
            if hasattr(listener, "enterAddexpr"):
                listener.enterAddexpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAddexpr"):
                listener.exitAddexpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAddexpr"):
                return visitor.visitAddexpr(self)
            else:
                return visitor.visitChildren(self)



    def addexpr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = subCParser.AddexprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_addexpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.mulexpr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 159
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = subCParser.AddexprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_addexpr)
                    self.state = 154
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 155
                    _la = self._input.LA(1)
                    if not(_la==subCParser.T__11 or _la==subCParser.T__12):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 156
                    self.mulexpr(0) 
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ShiftexprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(subCParser.ShiftexprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def addexpr(self):
            return self.getTypedRuleContext(subCParser.AddexprContext,0)


        def shiftexpr(self):
            return self.getTypedRuleContext(subCParser.ShiftexprContext,0)


        def getRuleIndex(self):
            return subCParser.RULE_shiftexpr

        def enterRule(self, listener):
            if hasattr(listener, "enterShiftexpr"):
                listener.enterShiftexpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitShiftexpr"):
                listener.exitShiftexpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitShiftexpr"):
                return visitor.visitShiftexpr(self)
            else:
                return visitor.visitChildren(self)



    def shiftexpr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = subCParser.ShiftexprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_shiftexpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.addexpr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 170
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = subCParser.ShiftexprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_shiftexpr)
                    self.state = 165
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 166
                    _la = self._input.LA(1)
                    if not(_la==subCParser.T__17 or _la==subCParser.T__18):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 167
                    self.addexpr(0) 
                self.state = 172
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class RelationalexprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(subCParser.RelationalexprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def shiftexpr(self):
            return self.getTypedRuleContext(subCParser.ShiftexprContext,0)


        def relationalexpr(self):
            return self.getTypedRuleContext(subCParser.RelationalexprContext,0)


        def getRuleIndex(self):
            return subCParser.RULE_relationalexpr

        def enterRule(self, listener):
            if hasattr(listener, "enterRelationalexpr"):
                listener.enterRelationalexpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRelationalexpr"):
                listener.exitRelationalexpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRelationalexpr"):
                return visitor.visitRelationalexpr(self)
            else:
                return visitor.visitChildren(self)



    def relationalexpr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = subCParser.RelationalexprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_relationalexpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.shiftexpr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 184
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = subCParser.RelationalexprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_relationalexpr)
                    self.state = 176
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 177
                    _la = self._input.LA(1)
                    if not(_la==subCParser.T__19 or _la==subCParser.T__20):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 179
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==subCParser.T__21:
                        self.state = 178
                        self.match(subCParser.T__21)


                    self.state = 181
                    self.shiftexpr(0) 
                self.state = 186
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
